fix issue on small devices where content was not showing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -376,17 +376,18 @@ button:hover {
 
   .my-photo {
     height: 200px;
+    width: 100px;
+    display: none;
   }
 
   .about-me {
-    height: 200px;
+    height: 500px;
   }
 
   .about-info {
     margin: 0;
     padding: 0;
-    display: none;
-
+    background-size: 50%;
   }
 }
 
